css/style.css
#app-navigation-toggle {
    background-color: var(--color-background-darker);
    z-index: 100000;
}
#search {
    position: absolute;
    margin: 10px 0 0 10px;
    left: 0;
    top: 0;
    z-index: 10000;
}
#search-form {
    display: inline-flex;
}
#search-form input[type=submit] {
    border-radius: 0px !important;
    margin-left: -1px !important;
    flex: 0 0 30px;
}
#search-term {
    margin-right: 0px !important;
    width: 200px;
}

#timeRangeSlider {
    position: absolute;
    margin: 10px 0 0 10px;
    left: 20%;
    top: 90%;
    z-index: 10000;
    width: 60%;
    height: 10px;
    background-color: var(--color-main-background) !important;
    display: none;
}
.noUi-handle::after,
.noUi-handle::before {
    height: 8px !important;
}
.noUi-handle {
    height: 20px !important;
    border-radius: 10px !important;
    background-color: var(--color-main-background) !important;
    box-shadow: inset 0 0 1px var(--color-background-dark), inset 0 1px 7px var(--color-background-dark), 0 3px 6px -3px var(--color-background-darker) !important;
}

.noUi-tooltip {
    display: none;
    z-index: 10001;
}
.noUi-active .noUi-tooltip {
    display: block;
    z-index: 10001;
}

.noUi-connect {
    background-color: var(--color-primary);
}
.timeRangeSlider-active {
    background-color: var(--color-warning, #b10610) !important;
}

#map {
    width: 100%;
    position: absolute;
    height: 100%;
}

#map *{
    box-sizing: content-box;
}

.leaflet-control-layers-selector {
    min-height: 0px;
}
.leaflet-control-layers-toggle {
    background-size: 75% !important;
}
.leaflet-control-layers:not(.leaflet-control-layers-expanded) {
    width: 33px;
    height: 37px;
}
.leaflet-control-layers:not(.leaflet-control-layers-expanded) > a {
    width: 100%;
    height: 100%;
}

#opening-hours-table {
    margin-left: 25px;
    display: none;
}

#opening-hours-table-toggle-collapse {
    display: none;
}

#opening-hours-table-toggle-expand {
}

#app {
    width: 100%;
}

.inline-wrapper {
    display: flex;
}

.location-icon, .popup-icon {
    height: 20px;
    margin-right: 5px;
}

.location-icon {
    margin-top: 5px;
}

.location-header {
    font-weight: bold;
    word-wrap: break-word;
    word-break: break-all;
}

.location-city {
    color: gray;
}

.poi-open, .poi-closed, .poi-closes {
    font-weight: 600;
}

.poi-open {
    color: #46ba61;
}

.poi-closed {
    color: #e9322d;
}

.poi-closes {
    color: #ffcc44;
}

.poi-opens {

}

.opening-hours-table .opening-hours-day {
    padding-right: 5px;
}

.opening-hours-table .opening-hours-hours {
    padding-left: 5px;
}

tr.selected td {
    font-weight: bold;
}

.opening-hours {
    padding-left: 5px;
    margin-top: 5px !important;
    margin-bottom: 5px !important;
}

/* Overriden Leaflet Styles */
.leaflet-bottom.leaflet-left {
    display: block;
    z-index: 100000;
}
.leaflet-popup-content {
    margin: 7px 7px !important;
    color: var(--color-main-text);
}
.leaflet-popup-content button {
    min-height: 10px !important;
    height: 27px !important;
    padding: 3px 8px 3px 8px !important;
}
.leaflet-popup-content-wrapper, .leaflet-popup-tip {
    background-color: var(--color-main-background) !important;
}
.leaflet-bar {
    background-color: var(--color-main-background);
}
.leaflet-bar button, .leaflet-bar button:hover,
.leaflet-touch .leaflet-bar a, .leaflet-touch .leaflet-bar a:hover {
    background-color: var(--color-main-background);
    border: 1px solid var(--color-border-dark);
    color: var(--color-main-text);
}
.leaflet-bar button:hover, leaflet-bar a:hover {
  background-color: var(--color-background-darker);
}
.leaflet-control-layers {
    background-color: var(--color-main-background);
    color: var(--color-main-text);
}
.leaflet-top.leaflet-left {
    top: 50px;
}
.leaflet-popup-content h2, .leaflet-popup-content h3 {
    margin-bottom: 0px;
}

.leaflet-popup-content p.location-city {
    margin-top: 0px;
}

.leaflet-popup-content-wrapper {
    border-radius: 3px !important;
}
.trackPopup {
    max-width: 250px;
}
.getGpx {
    word-wrap: break-word;
}
.trackPopupTitle {
    text-align: center;
}

.device-over-marker {
    border-radius: 50%;
}

.leaflet-marker-nonLocalizedPhoto.nonLocalizedPhoto-marker:after,
.leaflet-marker-contact.contact-marker:after,
.leaflet-marker-device.device-marker:after,
.leaflet-marker-photo.photo-marker:after {
    content:"";
    position: relative;
    bottom: 16px;
    border-width: 10px 10px 0;
    border-style: solid;
    border-color: var(--color-main-background) transparent;
    display: block;
    width: 0;
    margin-left: auto;
    margin-right: auto;
}
.leaflet-marker-nonLocalizedPhoto.nonLocalizedPhoto-marker:after {
    border-color: var(--color-warning) transparent;
}

.leaflet-marker-favorite-cluster .thumbnail,
.leaflet-marker-contact .thumbnail,
.leaflet-marker-device .thumbnail,
.leaflet-marker-nonLocalizedPhoto .thumbnail,
.leaflet-marker-photo .thumbnail {
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-color: white;
}
.leaflet-marker-nonLocalizedPhoto .thumbnail,
.leaflet-marker-photo .thumbnail {
    border-radius: 2px;
}
.leaflet-marker-device .thumbnail {
    background-size: 70%;
}
.leaflet-marker-device .thumbnail,
.leaflet-marker-contact .thumbnail {
    width: 101%;
    height: 101%;
    border-radius: 50%;
}
.leaflet-marker-favorite-cluster .thumbnail {
    border-radius: 50%;
}
.leaflet-marker-nonLocalizedPhoto .thumbnail {
    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

.leaflet-marker-device .label,
.leaflet-marker-contact .label,
.leaflet-marker-favorite-cluster .label,
.leaflet-marker-nonLocalizedPhoto .label,
.leaflet-marker-photo .label {
    position: absolute;
    top: -7px;
    right: -11px;
    color: #fff;
    background-color: #333;
    border-radius: 9px;
    height: 18px;
    min-width: 18px;
    line-height: 12px;
    text-align: center;
    padding: 3px;
}

.leaflet-marker-contact-tooltip,
.leaflet-marker-nonLocalizedPhoto-tooltip,
.leaflet-marker-photo-tooltip {
    opacity: 1 !important;
}

.leaflet-marker-device,
.leaflet-marker-contact {
    border: 2px solid var(--color-main-background);
    box-shadow: 3px 3px 10px #888;
    border-radius: 50%;
}
.leaflet-marker-photo {
    border: 2px solid var(--color-main-background);
}
.leaflet-marker-nonLocalizedPhoto {
    border: 2px solid var(--color-warning);
}
.leaflet-marker-nonLocalizedPhoto,
.leaflet-marker-photo {
    box-shadow: 3px 3px 10px #888;
    border-radius: var(--border-radius);
}

.leaflet-marker-device.device-marker,
.leaflet-marker-contact.contact-marker {
    top: -10px;
    border-radius: 50%;
}

.leaflet-marker-photo.photo-marker,
.leaflet-marker-nonLocalizedPhoto.nonLocalizedPhoto-marker{
    top: -10px;
}
.photo-tooltip {
    max-width: 325px;
    max-height: 325px;
}

.easy-button-button {
    margin: 0 !important;
    padding: 0 !important;
    border: 0px !important;
    border-radius: 2px 2px 2px 2px !important;
}
.easy-button-button span.fa{
    line-height: 1.7;
    font-size: 20px;
}
#dummylogo {
    display: none;
    content: url("images/.png");
}
.easy-button-button img {
    width: 100%;
    height: 100%;
}
.favoriteMarker {
    height: 22px !important;
    width: 22px !important;
    -webkit-mask: url('images/star-circle.svg') no-repeat 50% 50%;
    -webkit-mask-size: 15px;
    mask: url('images/star-circle.svg') no-repeat 50% 50%;
    mask-size: 15px;
}
.trackWaypoint {
    height: 25px !important;
    width: 25px !important;
    -webkit-mask: url('images/marker-icon.svg') no-repeat 50% 50%;
    -webkit-mask-size: 25px;
    mask: url('images/marker-icon.svg') no-repeat 50% 50%;
    mask-size: 25px;
}
.line-enabled {
    background: var(--color-background-dark);
}
.line-disabled {
    background: var(--color-main-background);
}
.editFavorite::after {
    border: 0;
}
.editFavorite form {
    margin-top: 0 !important;
}
.editFavorite button {
    height: 38px !important;
}
.editFavorite {
    width: 200px;
}
#navigation-routing:not(.icon-loading-small) > a::before {
    content: "\f4d7";
    font-family: 'Font Awesome\ 5 Free';
    font-style: normal;
    font-weight: 900;
    text-decoration: inherit;
    position: absolute;
    left: 16px;
}
#navigation-tracks:not(.icon-loading-small) > a::before {
    content: "\f018";
    font-family: 'Font Awesome\ 5 Free';
    font-style: normal;
    font-weight: 900;
    text-decoration: inherit;
    position: absolute;
    left: 16px;
}
.ui-autocomplete {
    z-index: 10000 !important;
}
.tooltip-photo-name {
    width: 100%;
    text-align: center;
}

.tooltip-contact-avatar {
    max-width: 100px;
    max-height: 100px;
    width: auto;
    height: auto;
}

.tooltip-contact-name {
    width: 100%;
    text-align: center;
}
/* Overriden routing/geocoder style */
.leaflet-routing-reverse-waypoints,
.leaflet-routing-add-waypoint {
    width: 25px !important;
    height: 25px !important;
    min-width: 25px !important;
    min-height: 25px !important;
    padding: 0px !important;
    border: 1px solid var(--color-border) !important;
    line-height: 0px !important;
}
.leaflet-routing-remove-waypoint::after {
    border: 1px solid var(--color-border) !important;
    right: 6px !important;
    width: 18px !important;
    height: 4px !important;
    background-color: var(--color-main-background) !important;
}
.app-navigation-entry-menu {
    z-index: 10001;
}
#devicecolorinput,
#trackcolorinput {
    opacity: 0;
    width: 0px;
    height: 0px;
    min-height: 0px;
    padding: 0px;
    margin: 0px;
    border: 0px;
}
.popuptable{
    font-size: 10px;
    border-collapse: collapse;
    word-wrap: break-word;
    white-space: normal;
    width: 220px;
    margin: auto;
}
.popuptable td{
    border: 1px solid var(--color-border);
    padding: 0px 5px 0px 5px;
    color: var(--color-main-text)
}
.popuptable tr:nth-child(even) {
    background-color: var(--color-main-background);
}
.popuptable tr:nth-child(odd) {
    background-color: var(--color-background-dark);
}
.popuptable tr:hover {
    background-color: var(--color-background-darker);
}
.trackNamesList {
    word-wrap: break-word;
    white-space: normal;
}

